# MeterScan-

./: .env  .gitignore  docker-compose.yml  nginx.conf
backend/: .gitignore  Dockerfile  api-config.json  docker-compose.yml  go.mod  go.sum  update-swagger.sh
backend/cmd/api/: main.go
backend/cmd/api-server/: main.go
backend/cmd/database/: main.go
backend/cmd/mail/: main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/api/: api.go  router.go
backend/internal/api-service/: api.go  router.go
backend/internal/config/: api.go
backend/internal/crud/: prediction.go  user.go
backend/internal/dto/: forms.go  models.go
backend/internal/errors/: errors.go
backend/internal/mail/: mail.go
backend/internal/media/: media.go
backend/internal/rabbit/: prediction.go  rabbit.go
backend/internal/schema/: predictions.go  users.go
backend/internal/service/: config.go  service.go
backend/internal/services/: service.go
backend/internal/store/: database.go
backend/internal/util/: bcrypt.go  recaptcha.go
backend/media/prediction/: 1
backend/templates/: notification.gohtml  request_verification.gohtml
consumer/: main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.scss  env.d.ts  index.js  requests.js  stages.js
frontend/src/common/: AuthRedirector.jsx  RemoveTrailingSlash.jsx  Root.jsx  (+1 more)
grpc/: database.proto  go-protoc.bat  image.proto  python-protoc.sh
ml/: Dockerfile  main.py  pyproject.toml  requirements.txt  text_detection.py
ml/proto/: .gitignore
(+64 files in other folders)
