[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["evabronskayaa <eva27122002b@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pika = "^1.3.2"
numpy = "^1.26.2"
pillow = "^10.1.0"
onnxruntime = "^1.16.3"
paddleocr = "^2.7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
